--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
         <nav>
             <a href="#gallery" class="nav-link">Gallery</a>
             <a href="#about" class="nav-link">About</a>
-            <a href="#commissions" class="nav-link">Commissions</a>
+            <a href="#connect" class="nav-link">Connect</a>
         </nav>
     </header>
 
     <main>
         <section id="hero">
             <h1 class="glow-title">The Abstract American</h1>
-            <p class="subtitle">Acrylic, Watercolor, and Gouache on Canvas and Paper</p>
         </section>
 
         <section id="gallery">
-            <div id="gallery-grid">
+            <div id="gallery-container">
                 <!-- Artworks will be dynamically inserted here by script.js -->
             </div>
         </section>
 
         <section id="about">
-            <h2>About the Artist</h2>
-            <div class="about-content">
+            <h2>About</h2>
+            <div class="content-block">
                 <!-- === YOUR ACTION REQUIRED === -->
-                <!-- Replace the content below with your artist statement or bio. -->
-                <p>The Abstract American is the work of a multi-media artist exploring the intersection of color, form, and emotion. Each piece is a unique journey rendered in acrylic, watercolor, and gouache.</p>
-                <p>My work is driven by intuition and a deep connection to the materials. The goal is not just to create an image, but to create an experience. This digital gallery serves as a portfolio and an invitation to connect with the art on a personal level.</p>
+                <!-- I've written this based on your notes. Feel free to refine it. -->
+                <p>Art is not a simple creation; it is an exorcism. It's the process of sorting through the difficult, beautiful stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
+                <p>Each work is a finished accomplishment, a journey through the challenging and the sublime. This is the core of The Abstract American: not just images on a canvas, but relics of a process, presented for those who feel the same pull.</p>
             </div>
         </section>
 
-        <section id="commissions">
-            <h2>Commissions & Inquiries</h2>
-            <div class="commissions-content">
+        <section id="connect">
+            <h2>Connect</h2>
+            <div class="content-block">
                  <!-- === YOUR ACTION REQUIRED === -->
-                <p>I am currently available for mural projects and custom painting commissions. If my style resonates with you and you have a vision for a unique piece for your home or business, I would love to hear from you.</p>
-                <p>For all commission inquiries, acquisition questions, or to just start a conversation, please contact me directly via email.</p>
-                <a href="mailto:your-email@example.com" class="email-link">your-email@example.com</a>
+                 <!-- This is the new, more elusive tone. -->
+                <p>Great things are born from dialogue, not instruction. A commission or collaboration is a conversation, a meeting of visions.</p>
+                <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out. Let's see if our visions align.</p>
+                <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
             </div>
         </section>
     </main>
@@ -65,13 +65,10 @@
             <p id="modal-details"></p>
             <div id="modal-acquisition-info">
                  <!-- === YOUR ACTION REQUIRED === -->
-                 <!-- Update the text and links below. You can get a crypto payment link from your Coinbase account. -->
-                <p><strong>Acquire this Piece:</strong> To add this work to your collection, you can support the artist through patronage. The suggested acquisition value is negotiable, starting from a base donation.</p>
-                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title to arrange shipping.</p>
-                <!-- Example: Replace '#' with your actual Coinbase Commerce payment link -->
-                <a href="#" target="_blank" class="donate-button">Donate with Crypto (Coinbase)</a>
-                <!-- Optional: Add a QR code image here for a specific wallet -->
-                <!-- <img src="images/your-btc-qr-code.png" alt="BTC Wallet QR Code" class="qr-code"> -->
+                 <!-- Update the email and Coinbase link. -->
+                <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome. All serious offers are considered.</p>
+                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title to arrange shipping and handling.</p>
+                <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
             </div>
         </div>
     </div>
