--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+    <!-- NEW: Subtle background texture -->
+    <div class="background-texture"></div>
+
     <header id="header">
         <nav>
             <a href="#gallery" class="nav-link">Gallery</a>
@@ -21,6 +24,8 @@
 
     <main>
         <section id="hero">
+            <!-- NEW: The Hero Frame for desktop -->
+            <div class="hero-frame"></div>
             <h1 class="glow-title">The Abstract American</h1>
         </section>
 
@@ -33,8 +38,6 @@
         <section id="about">
             <h2>About</h2>
             <div class="content-block">
-                <!-- === YOUR ACTION REQUIRED === -->
-                <!-- I've written this based on your notes. Feel free to refine it. -->
                 <p>Art is not a simple creation; it is an exorcism. It's the process of sorting through the difficult, beautiful stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
                 <p>Each work is a finished accomplishment, a journey through the challenging and the sublime. This is the core of The Abstract American: not just images on a canvas, but relics of a process, presented for those who feel the same pull.</p>
             </div>
@@ -43,8 +46,6 @@
         <section id="connect">
             <h2>Connect</h2>
             <div class="content-block">
-                 <!-- === YOUR ACTION REQUIRED === -->
-                 <!-- This is the new, more elusive tone. -->
                 <p>Great things are born from dialogue, not instruction. A commission or collaboration is a conversation, a meeting of visions.</p>
                 <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out. Let's see if our visions align.</p>
                 <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
@@ -64,8 +65,6 @@
             <h3 id="modal-title"></h3>
             <p id="modal-details"></p>
             <div id="modal-acquisition-info">
-                 <!-- === YOUR ACTION REQUIRED === -->
-                 <!-- Update the email and Coinbase link. -->
                 <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome. All serious offers are considered.</p>
                 <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title to arrange shipping and handling.</p>
                 <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
