--- a/index.html
+++ b/index.html
@@ -11,43 +11,52 @@
 </head>
 <body>
 
-    <!-- NEW: Subtle background texture -->
     <div class="background-texture"></div>
+
+    <!-- NEW: Splash Screen -->
+    <div id="splash-screen">
+        <button id="enter-button">Click to Enter The Abstract American</button>
+    </div>
+
+    <!-- The Audio Player -->
+    <audio id="background-music" loop src="music.mp3"></audio>
 
     <header id="header">
         <nav>
-            <a href="#gallery" class="nav-link">Gallery</a>
+            <a href="#kinetic-wall" class="nav-link">Gallery</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#connect" class="nav-link">Connect</a>
         </nav>
     </header>
 
     <main>
-        <section id="hero">
-            <!-- NEW: The Hero Frame for desktop -->
-            <div class="hero-frame"></div>
+        <!-- REPLACED GALLERY WITH KINETIC WALL -->
+        <section id="kinetic-wall">
             <h1 class="glow-title">The Abstract American</h1>
-        </section>
-
-        <section id="gallery">
-            <div id="gallery-container">
-                <!-- Artworks will be dynamically inserted here by script.js -->
+            <div class="scroller-container">
+                <div class="scroller" id="scroller-top">
+                    <!-- Images will be inserted here -->
+                </div>
+                <div class="scroller" id="scroller-bottom">
+                    <!-- Images will be inserted here -->
+                </div>
             </div>
         </section>
 
+        <!-- The rest of the page remains -->
         <section id="about">
             <h2>About</h2>
             <div class="content-block">
-                <p>Art is not a simple creation; it is an exorcism. It's the process of sorting through the difficult, beautiful stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
-                <p>Each work is a finished accomplishment, a journey through the challenging and the sublime. This is the core of The Abstract American: not just images on a canvas, but relics of a process, presented for those who feel the same pull.</p>
+                <p>Art is an exorcism. It's sorting through the difficult stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
+                <p>Each work is a relic of that process, presented for those who feel the same pull.</p>
             </div>
         </section>
 
         <section id="connect">
             <h2>Connect</h2>
             <div class="content-block">
-                <p>Great things are born from dialogue, not instruction. A commission or collaboration is a conversation, a meeting of visions.</p>
-                <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out. Let's see if our visions align.</p>
+                <p>Great things are born from dialogue, not instruction. A commission is a conversation, a meeting of visions.</p>
+                <p>If my work resonates and you wish to begin a conversation, you are invited to reach out.</p>
                 <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
             </div>
         </section>
@@ -65,8 +74,8 @@
             <h3 id="modal-title"></h3>
             <p id="modal-details"></p>
             <div id="modal-acquisition-info">
-                <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome. All serious offers are considered.</p>
-                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title to arrange shipping and handling.</p>
+                <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome.</p>
+                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title.</p>
                 <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
             </div>
         </div>
