--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <div class="background-texture"></div>
-
-    <!-- NEW: Splash Screen -->
     <div id="splash-screen">
         <button id="enter-button">Click to Enter The Abstract American</button>
     </div>
-
-    <!-- The Audio Player -->
     <audio id="background-music" loop src="music.mp3"></audio>
 
     <header id="header">
@@ -30,9 +25,8 @@
     </header>
 
     <main>
-        <!-- REPLACED GALLERY WITH KINETIC WALL -->
+        <!-- This section's structure is now simpler and more robust -->
         <section id="kinetic-wall">
-            <h1 class="glow-title">The Abstract American</h1>
             <div class="scroller-container">
                 <div class="scroller" id="scroller-top">
                     <!-- Images will be inserted here -->
@@ -41,46 +35,41 @@
                     <!-- Images will be inserted here -->
                 </div>
             </div>
+            <!-- Title is now outside the scroller container to allow absolute positioning -->
+            <h1 class="glow-title">The Abstract American</h1>
         </section>
 
-        <!-- The rest of the page remains -->
+        <!-- The rest of the page remains the same -->
         <section id="about">
             <h2>About</h2>
             <div class="content-block">
-                <p>Art is an exorcism. It's sorting through the difficult stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
-                <p>Each work is a relic of that process, presented for those who feel the same pull.</p>
+                <p>Art is an exorcism... a journey through the challenging and the sublime.</p>
             </div>
         </section>
-
         <section id="connect">
             <h2>Connect</h2>
             <div class="content-block">
-                <p>Great things are born from dialogue, not instruction. A commission is a conversation, a meeting of visions.</p>
-                <p>If my work resonates and you wish to begin a conversation, you are invited to reach out.</p>
+                <p>A commission is a conversation, a meeting of visions.</p>
                 <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
             </div>
         </section>
     </main>
     
-    <footer>
-        <p>© 2024 The Abstract American. All Rights Reserved.</p>
-    </footer>
+    <footer><p>© 2024 The Abstract American. All Rights Reserved.</p></footer>
 
-    <!-- Modal for displaying artwork -->
+    <!-- Modal is unchanged -->
     <div id="art-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">×</span>
             <img id="modal-img" src="" alt="Artwork">
-            <h3 id="modal-title"></h3>
-            <p id="modal-details"></p>
+            <h3 id="modal-title"></h3><p id="modal-details"></p>
             <div id="modal-acquisition-info">
                 <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome.</p>
-                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title.</p>
+                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
                 <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
             </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
