--- a/index.html
+++ b/index.html
@@ -16,34 +16,39 @@
     </div>
     <audio id="background-music" loop src="music.mp3"></audio>
 
+    <!-- NEW: Persistent Music Control Button -->
+    <div id="music-control">
+        <button id="music-button">❚❚</button> <!-- Start with a pause symbol -->
+    </div>
+
     <header id="header">
         <nav>
-            <a href="#kinetic-wall" class="nav-link">Gallery</a>
+            <a href="#gallery" class="nav-link">Gallery</a>
             <a href="#about" class="nav-link">About</a>
             <a href="#connect" class="nav-link">Connect</a>
         </nav>
     </header>
 
     <main>
-        <!-- This section's structure is now simpler and more robust -->
-        <section id="kinetic-wall">
-            <div class="scroller-container">
-                <div class="scroller" id="scroller-top">
-                    <!-- Images will be inserted here -->
-                </div>
-                <div class="scroller" id="scroller-bottom">
-                    <!-- Images will be inserted here -->
-                </div>
-            </div>
-            <!-- Title is now outside the scroller container to allow absolute positioning -->
+        <!-- The Original Hero Section is BACK -->
+        <section id="hero">
+            <div class="hero-frame"></div>
             <h1 class="glow-title">The Abstract American</h1>
         </section>
 
-        <!-- The rest of the page remains the same -->
+        <!-- The NEW Rhythmic Gallery Section -->
+        <section id="gallery">
+            <h2>Gallery</h2>
+            <div id="gallery-stage">
+                <!-- The rhythmic images will be inserted here by JavaScript -->
+            </div>
+        </section>
+
+        <!-- The rest of the page remains -->
         <section id="about">
             <h2>About</h2>
             <div class="content-block">
-                <p>Art is an exorcism... a journey through the challenging and the sublime.</p>
+                <p>Art is an exorcism. It's sorting through the difficult stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
             </div>
         </section>
         <section id="connect">
@@ -57,15 +62,13 @@
     
     <footer><p>© 2024 The Abstract American. All Rights Reserved.</p></footer>
 
-    <!-- Modal is unchanged -->
+    <!-- The Modal is unchanged and will still work -->
     <div id="art-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">×</span>
-            <img id="modal-img" src="" alt="Artwork">
-            <h3 id="modal-title"></h3><p id="modal-details"></p>
+            <img id="modal-img" src="" alt="Artwork"><h3 id="modal-title"></h3><p id="modal-details"></p>
             <div id="modal-acquisition-info">
-                <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome.</p>
-                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
+                <p><strong>Acquisition:</strong> ...</p>
                 <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
             </div>
         </div>
