--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <div class="background-texture"></div>
+
     <div id="splash-screen">
         <button id="enter-button">Click to Enter The Abstract American</button>
     </div>
+
     <audio id="background-music" loop src="music.mp3"></audio>
 
     <div id="music-control">
@@ -44,18 +46,40 @@
 
         <section id="about">
             <h2>About</h2>
-            <div class="content-block"><p>Art is an exorcism...</p></div>
+            <div class="content-block">
+                <p>Art is not a simple creation; it is an exorcism. It's the process of sorting through the difficult, beautiful stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
+                <p>Each work is a finished accomplishment, a journey through the challenging and the sublime. This is the core of The Abstract American: not just images on a canvas, but relics of a process, presented for those who feel the same pull.</p>
+            </div>
         </section>
 
         <section id="connect">
             <h2>Connect</h2>
-            <div class="content-block"><p>A commission is a conversation...</p><a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a></div>
+            <div class="content-block">
+                <p>Great things are born from dialogue, not instruction. A commission or collaboration is a conversation, a meeting of visions.</p>
+                <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out. Let's see if our visions align.</p>
+                <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
+            </div>
         </section>
     </main>
     
-    <footer><p>© 2024 The Abstract American. All Rights Reserved.</p></footer>
+    <footer>
+        <p>© 2024 The Abstract American. All Rights Reserved.</p>
+    </footer>
 
-    <div id="art-modal" class="modal"> <!-- Modal is unchanged --> </div>
+    <div id="art-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">×</span>
+            <img id="modal-img" src="" alt="Artwork">
+            <h3 id="modal-title"></h3>
+            <p id="modal-details"></p>
+            <div id="modal-acquisition-info">
+                <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome. All serious offers are considered.</p>
+                <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title to arrange shipping and handling.</p>
+                <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
