--- a/index.html
+++ b/index.html
@@ -12,16 +12,6 @@
 <body>
     <div class="background-texture"></div>
 
-    <div id="splash-screen">
-        <button id="enter-button">Click to Enter The Abstract American</button>
-    </div>
-
-    <audio id="background-music" loop src="music.mp3"></audio>
-
-    <div id="music-control">
-        <button id="music-button">❚❚</button>
-    </div>
-
     <header id="header">
         <nav>
             <a href="#hero" class="nav-link">Title</a>
@@ -40,7 +30,10 @@
         <section id="gallery">
             <h2>Gallery</h2>
             <div id="gallery-stage">
-                <!-- The rhythmic images will be inserted here by JavaScript -->
+                <!-- The holographic images will be inserted here by JavaScript -->
+            </div>
+            <div id="gallery-info">
+                <!-- The artwork title will be inserted here -->
             </div>
         </section>
 
