--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="art-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">×</span>
-            <!-- FIX: New two-column structure for the modal -->
+            <!-- NEW: Two-column structure for the modal -->
             <div class="modal-text-container">
                 <h3 id="modal-title"></h3>
                 <p id="modal-details"></p>
