--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         </section>
 
         <section id="gallery">
-            <h2>Gallery</h2>
-            <div id="gallery-stage">
-                <!-- The holographic images will be inserted here by JavaScript -->
-            </div>
-            <div id="gallery-info">
-                <!-- The artwork title will be inserted here -->
+            <div class="gallery-content-wrapper">
+                <h2>Gallery</h2>
+                <div id="gallery-stage">
+                    <!-- The holographic images will be inserted here by JavaScript -->
+                </div>
+                <div id="gallery-info">
+                    <!-- The artwork title will be inserted here -->
+                </div>
             </div>
         </section>
 
@@ -62,7 +64,6 @@
     <div id="art-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">×</span>
-            <!-- NEW: Two-column structure for the modal -->
             <div class="modal-text-container">
                 <h3 id="modal-title"></h3>
                 <p id="modal-details"></p>
