--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="background-texture"></div>
-
     <header id="header">
         <nav>
             <a href="#hero" class="nav-link">Title</a>
@@ -23,19 +21,12 @@
 
     <main>
         <section id="hero">
-            <div class="hero-frame"></div>
-            <h1 class="glow-title">The Abstract American</h1>
+            <h1 class="main-title">The Abstract American</h1>
         </section>
 
         <section id="gallery">
-            <div class="gallery-content-wrapper">
-                <h2>Gallery</h2>
-                <div id="gallery-stage">
-                    <!-- The holographic images will be inserted here by JavaScript -->
-                </div>
-                <div id="gallery-info">
-                    <!-- The artwork title will be inserted here -->
-                </div>
+            <div id="gallery-grid">
+                <!-- Artworks will be inserted here by JavaScript -->
             </div>
         </section>
 
@@ -51,19 +42,25 @@
             <h2>Connect</h2>
             <div class="content-block">
                 <p>Great things are born from dialogue, not instruction. A commission or collaboration is a conversation, a meeting of visions.</p>
-                <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out. Let's see if our visions align.</p>
+                <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out.</p>
                 <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
             </div>
         </section>
     </main>
     
     <footer>
-        <p>© 2024 The Abstract American. All Rights Reserved.</p>
+        <p>&copy; 2024 The Abstract American. All Rights Reserved.</p>
     </footer>
 
     <div id="art-modal" class="modal">
         <div class="modal-content">
-            <span class="close-button">×</span>
+            <span id="modal-close" class="modal-control">&times;</span>
+            <button id="modal-prev" class="modal-control modal-arrow">&lt;</button>
+            <button id="modal-next" class="modal-control modal-arrow">&gt;</button>
+            
+            <div class="modal-image-container">
+                <img id="modal-img" src="" alt="Artwork">
+            </div>
             <div class="modal-text-container">
                 <h3 id="modal-title"></h3>
                 <p id="modal-details"></p>
@@ -72,9 +69,6 @@
                     <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title to arrange shipping and handling.</p>
                     <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
                 </div>
-            </div>
-            <div class="modal-image-container">
-                <img id="modal-img" src="" alt="Artwork">
             </div>
         </div>
     </div>
