--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
     <main>
         <section id="hero">
-            <h1 class="main-title">The Abstract American</h1>
+            <h1 class="glow-title">The Abstract American</h1>
         </section>
+
+        <div class="warp-transition"></div>
 
         <section id="gallery">
             <div id="gallery-grid">
@@ -34,15 +36,13 @@
             <h2>About</h2>
             <div class="content-block">
                 <p>Art is not a simple creation; it is an exorcism. It's the process of sorting through the difficult, beautiful stages of love and hate as a piece comes together, managing through chaos to find what is true.</p>
-                <p>Each work is a finished accomplishment, a journey through the challenging and the sublime. This is the core of The Abstract American: not just images on a canvas, but relics of a process, presented for those who feel the same pull.</p>
             </div>
         </section>
 
         <section id="connect">
             <h2>Connect</h2>
             <div class="content-block">
-                <p>Great things are born from dialogue, not instruction. A commission or collaboration is a conversation, a meeting of visions.</p>
-                <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out.</p>
+                <p>Great things are born from dialogue, not instruction. A commission is a conversation, a meeting of visions.</p>
                 <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
             </div>
         </section>
@@ -55,18 +55,16 @@
     <div id="art-modal" class="modal">
         <div class="modal-content">
             <span id="modal-close" class="modal-control">&times;</span>
-            <button id="modal-prev" class="modal-control modal-arrow">&lt;</button>
-            <button id="modal-next" class="modal-control modal-arrow">&gt;</button>
-            
             <div class="modal-image-container">
                 <img id="modal-img" src="" alt="Artwork">
+                <button id="modal-prev" class="modal-control modal-arrow">&lt;</button>
+                <button id="modal-next" class="modal-control modal-arrow">&gt;</button>
             </div>
             <div class="modal-text-container">
                 <h3 id="modal-title"></h3>
                 <p id="modal-details"></p>
                 <div id="modal-acquisition-info">
-                    <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome. All serious offers are considered.</p>
-                    <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title to arrange shipping and handling.</p>
+                    <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome.</p>
                     <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
                 </div>
             </div>
