--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>The Abstract American</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -21,10 +21,13 @@
 
     <main>
         <section id="hero">
-            <h1 class="glow-title">The Abstract American</h1>
+            <div class="hero-background"></div>
+            <h1 class="main-title">The Abstract American</h1>
         </section>
 
-        <div class="warp-transition"></div>
+        <section id="warp-drive">
+            <canvas id="starfield-canvas"></canvas>
+        </section>
 
         <section id="gallery">
             <div id="gallery-grid">
@@ -42,7 +45,7 @@
         <section id="connect">
             <h2>Connect</h2>
             <div class="content-block">
-                <p>Great things are born from dialogue, not instruction. A commission is a conversation, a meeting of visions.</p>
+                <p>If my work resonates with you on a deeper level and you wish to begin a conversation about a potential project or acquisition, you are invited to reach out.</p>
                 <a href="mailto:your-email@example.com" class="email-link">Begin the Conversation</a>
             </div>
         </section>
@@ -55,16 +58,18 @@
     <div id="art-modal" class="modal">
         <div class="modal-content">
             <span id="modal-close" class="modal-control">&times;</span>
+            <button id="modal-prev" class="modal-control modal-arrow">&lt;</button>
+            <button id="modal-next" class="modal-control modal-arrow">&gt;</button>
+            
             <div class="modal-image-container">
                 <img id="modal-img" src="" alt="Artwork">
-                <button id="modal-prev" class="modal-control modal-arrow">&lt;</button>
-                <button id="modal-next" class="modal-control modal-arrow">&gt;</button>
             </div>
             <div class="modal-text-container">
                 <h3 id="modal-title"></h3>
                 <p id="modal-details"></p>
                 <div id="modal-acquisition-info">
-                    <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome.</p>
+                    <p><strong>Acquisition:</strong> To make this piece part of your story, a contribution through patronage is welcome. All serious offers are considered.</p>
+                    <p>After making your crypto donation, please email <a href="mailto:your-email@example.com">your-email@example.com</a> with the transaction details and the artwork title.</p>
                     <a href="#" target="_blank" class="donate-button">Patronage via Crypto (Coinbase)</a>
                 </div>
             </div>
